--- a/src/main/resources/sgu/Client/chat.fxml
+++ b/src/main/resources/sgu/Client/chat.fxml
@@ -4,18 +4,19 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ScrollPane layoutX="8.0" layoutY="8.0" prefHeight="308.0" prefWidth="430.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="302.0" prefWidth="425.0" />
-        </content>
+      <ScrollPane fx:id="chatScroll" layoutX="8" layoutY="8" prefHeight="308.0" prefWidth="430.0" fitToWidth="true">
+         <content>
+            <VBox fx:id="chatWindow" prefHeight="304.0" prefWidth="427.0" />
+         </content>
       </ScrollPane>
-      <TextArea layoutX="8.0" layoutY="330.0" prefHeight="56.0" prefWidth="430.0" />
+      <TextArea fx:id="chatInput" layoutX="8.0" layoutY="330.0" prefHeight="56.0" prefWidth="430.0" />
       <Button fx:id="leaveBtn" layoutX="469.0" layoutY="138.0" mnemonicParsing="false" text="Leave Room" />
     <AnchorPane layoutX="440.0" layoutY="8.0" minHeight="0.0" minWidth="0.0" prefHeight="56.0" prefWidth="158.0" style="-fx-border-color: black;">
          <children>
